# Kinecraft

./: CMakeLists.txt  README.md
Kinecraft1/: CMakeLists.txt  Kinecraft1.cpp  Kinecraft1.h
glad/include/glad/: glad.h
glad/src/: glad.c
